# digital-analysis

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRODUCT_STRATEGY.md  UPGRADE_PLAN.md
examples/: api_app.py  bubble_demo.py  geopolitical_demo.py  recession_demo.py
src/digital_analysis/: __init__.py  orchestrator.py
src/digital_analysis/analysis/: confidence.py  contradiction.py  engine.py  evidence_builder.py  horizons.py  router.py  scenarios.py  scorer.py  summary.py  workflows.py
src/digital_analysis/answers/: __init__.py  builder.py  schema.py
src/digital_analysis/cli/: main.py
src/digital_analysis/contracts/: evidence.py  tasks.py
src/digital_analysis/execution/: concurrent.py  http.py  snapshots.py
src/digital_analysis/models/: api_openai.py  base.py  local_ollama.py  router.py
src/digital_analysis/planner/: __init__.py  classifier.py  planner.py  priceability.py  registry.py
src/digital_analysis/product/: __init__.py  alerts.py  api.py  models.py  monitoring.py  service.py  store.py
src/digital_analysis/providers/: __init__.py  (+17 more)
tests/: test_analysis.py  test_analysis_enrichment.py  test_answers.py  test_api_end_to_end.py  test_api_module.py  test_concurrent.py  test_derivatives_and_positioning.py  test_evidence_builder.py  test_filestore.py  test_market_data_providers.py  test_models.py  test_monitoring.py  test_more_providers.py  test_orchestrator.py  test_planner.py  test_product_service.py  test_providers.py  test_scaffold.py  test_snapshots.py  test_synthesis.py  test_workflow_router.py  test_workflows.py  test_yfinance_provider.py
(+3 files in other folders)
